# bare-build

./: CMakeLists.txt  README.md  bin.js  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
lib/: appimagetool.js  assets.js  constants.js  fs.js  prebuilds.js  runtime.c  runtime.js  runtime.manifest
lib/platform/: android.js  apple.js  linux.js  windows.js
lib/platform/android/: create-apk.js  create-app-bundle.js  create-executable.js
lib/platform/apple/: create-app.js  create-executable.js  create-package-component.js  create-package.js  sign.js  to-identifier.js
lib/platform/linux/: create-app-dir.js  create-app-image.js  create-executable.js
lib/platform/windows/: create-executable.js  create-msix-content-directory.js  create-msix.js
lib/runtime/: apple.h  linux.h  windows.h
npm/android-arm/: package.json
npm/android-arm64/: package.json
npm/android-ia32/: package.json
npm/android-x64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/ios-arm64/: package.json
npm/ios-arm64-simulator/: package.json
npm/ios-x64-simulator/: package.json
npm/linux-arm64/: index.js  package.json
npm/linux-x64/: package.json
npm/win32-arm64/: .gitignore  index.js  package.json
npm/win32-x64/: package.json
test/fixtures/addon/: app.js  package.json
test/fixtures/asset/: app.js  package.json
test/fixtures/basic/: app.js  package.json  preflight.js
